# AppTwitter

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETADO.md  EXAMPLES.md  GEMINI.md  README.md  RESUMEN.md  SCHEDULING.md  SETUP.md  add_linkedin_articles.py  app.sh  articulos.example.csv  articulos_linkedin.csv  articulos_linkedin_template.csv  articulos_substack.csv  list_gemini_models.py  pyproject.toml  voz.example.yaml
src/: __init__.py  cli.py  db.py  filters.py  generator.py  ingest.py  linkedin_client.py  linkedin_generator.py  llm_service.py  notifier.py  scheduler.py  utils.py  voice.py  x_client.py
src/web/: __init__.py  main.py
src/web/static/: index.html  style.css
